tests/codegen/fail/interface/struct/attr_no_fields.rs
use juniper::graphql_interface;

#[graphql_interface]
struct Character {}

fn main() {}
